--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -5,20 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rifat's First website</title> 
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <display=swap" rel="stylesheet">
 </head>
 <body>
-        <section>
+        <section class="top-banner">
             <div class="half-widht">
                 <h1>Welcome To</h1>
-    <h1><span class="name-highlite">Rifat</span>  Website</h1>
-    <h3>As a Beginner web Debloper</h3> 
+    <h1><span class="name-highlite">Rifat</span><span class="name-highlite2">Website</span></h1>
+    <h3 aignl="center">As a Beginner web Debloper</h3> 
     <p>Web Developer with a passion for web developer. Here is the Entry Level Web Developer Resume example: · Excellent communication and presentation skills. · Sound knowledge of Windows, Vista, Linux, UNIX and Mac ...</p>
-            </div>
+           <a class="link-button" target="_blank" href="https://www.facebook.com/rifat.ahmed2013/">Contact Me</a>
+</div>
             <div class="half-widht"> 
                 <img src="Backgorund/image00.png">
+            </div>
+        </section>
+        <section class="dream-area">
+            <div class="half-width">
+                <img src="Backgorund/image00.png">
+            </div>
+            <div class="half-width">
+                <h2 align="center">Dream Area</h2>
+                <h3>Merch from DREAM! </h3>
+                <p>A dream is a succession of images, ideas, emotions,<br> and sensations that usually occur involuntarily in the mind during certain stages of sleep.</p>
             </div>
         </section>
 
